--- a/index.html
+++ b/index.html
@@ -50,19 +50,82 @@
             </div>
         </div>
         <div class="hero-buttons">
-            <a class="button" href="#">About Me<i class="fas fa-angle-double-down fa-button-icon"></i></a>
+            <a class="button" href="#">About Me<i class="fas fa-angle-double-down fa-icon-right"></i></a>
         </div>
     </div>
 
     <div class="about">
         <span class="about-title">
-            Me and the code
+            Me and the code<i class="fas fa-code fa-icon-right"></i>
         </span>
         <span class="about-content">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab repudiandae explicabo esse eius officiis, assumenda in recusandae illo, qui consectetur aut repellendus omnis dolorem? Velit quam aperiam doloribus amet quaerat!
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab repudiandae explicabo esse eius officiis, assumenda in recusandae illo, qui consectetur aut repellendus omnis dolorem? Velit quam aperiam doloribus amet quaerat!
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab repudiandae explicabo esse eius officiis, assumenda in recusandae illo, qui consectetur aut repellendus omnis dolorem? Velit quam aperiam doloribus amet quaerat!
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab repudiandae explicabo esse eius officiis,
+            assumenda in recusandae illo, qui consectetur aut repellendus omnis dolorem? Velit quam aperiam doloribus
+            amet quaerat!
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab repudiandae explicabo esse eius officiis,
+            assumenda in recusandae illo, qui consectetur aut repellendus omnis dolorem? Velit quam aperiam doloribus
+            amet quaerat!
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab repudiandae explicabo esse eius officiis,
+            assumenda in recusandae illo, qui consectetur aut repellendus omnis dolorem? Velit quam aperiam doloribus
+            amet quaerat!
         </span>
+    </div>
+
+    <div class="skills">
+        <span class="skills-title">
+            What I Love<i class="fas fa-heart fa-icon-right"></i>
+        </span>
+        <span class="skills-content">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab repudiandae explicabo esse eius officiis,
+            assumenda in recusandae illo, qui consectetur aut repellendus omnis dolorem? Velit quam aperiam doloribus
+            amet quaerat!
+        </span>
+        <div class="skills-items">
+            <div>
+                <div class="skills-item-icon">
+                    <i class="fab fa-js fa-icon-right"></i>
+                </div>
+                <div class="skills-item-title">
+                    Javascript
+                </div>
+                <div class="skills-item-content">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                </div>
+            </div>
+            <div>
+                <div class="skills-item-icon">
+                    <i class="fab fa-react fa-icon-right"></i>
+                </div>
+                <div class="skills-item-title">
+                    React
+                </div>
+                <div class="skills-item-content">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                </div>
+            </div>
+            <div>
+                <div class="skills-item-icon">
+                    <i class="fab fa-python fa-icon-right"></i>
+                </div>
+                <div class="skills-item-title">
+                    Python
+                </div>
+                <div class="skills-item-content">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                </div>
+            </div>
+            <div>
+                <div class="skills-item-icon">
+                    <i class="fab fa-html5 fa-icon-right"></i>
+                </div>
+                <div class="skills-item-title">
+                    HTML and CSS
+                </div>
+                <div class="skills-item-content">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                </div>
+            </div>
+        </div>
     </div>
 
 </body>
