--- a/index.html
+++ b/index.html
@@ -7,13 +7,29 @@
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <link rel='shortcut icon' type='image/x-icon' href='assets/img/favicon.ico' />
+    <link rel="apple-touch-icon" sizes="57x57" href="/assets/img/favicon_57_57.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="/assets/img/favicon_72_72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="/assets/img/favicon_76_76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="/assets/img/favicon_114_114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="/assets/img/favicon_120_120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="/assets/img/favicon_144_144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="/assets/img/favicon_152_152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="/assets/img/favicon_180_180.png">
+
+    <link rel="icon" type="image/png" sizes="260x260"  href="/assets/img/favicon_260_260.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/assets/img/favicon_32_32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="/assets/img/favicon_96_96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/assets/img/favicon_16_16.png">
+
+    <meta name="msapplication-TileColor" content="#FFCC00">
+    <meta name="msapplication-TileImage" content="/assets/img/favicon_144_144.png">
+    <meta name="theme-color" content="#FFCC00">
 
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css">
 
-    <link rel="stylesheet" href="assets/css/style.css" />
+    <link rel="stylesheet" href="/assets/css/style.css" />
 
-    <title>Title</title>
+    <title>Emanuele Scarabattoli</title>
 </head>
 
 <body>
