--- a/index.html
+++ b/index.html
@@ -1,11 +1,14 @@
 <!doctype html>
 <html>
 
-<head>
-    <meta charset="utf-8" />
+<head lang="en">
 
-    <meta name="description" content="" />
+    <meta charset="utf-8" />
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <meta name="description" content="Hi! I'm Emanuele Scarabattoli, a software developer and web designer based in Perugia (PG), Umbria, Italy." />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="robots" content="index, follow">
+    <title>Emanuele Scarabattoli</title>
 
     <link rel="apple-touch-icon" sizes="57x57" href="assets/img/favicon_57_57.png">
     <link rel="apple-touch-icon" sizes="72x72" href="assets/img/favicon_72_72.png">
@@ -15,21 +18,17 @@
     <link rel="apple-touch-icon" sizes="144x144" href="assets/img/favicon_144_144.png">
     <link rel="apple-touch-icon" sizes="152x152" href="assets/img/favicon_152_152.png">
     <link rel="apple-touch-icon" sizes="180x180" href="assets/img/favicon_180_180.png">
-
-    <link rel="icon" type="image/png" sizes="260x260"  href="assets/img/favicon_260_260.png">
+    <link rel="icon" type="image/png" sizes="260x260" href="assets/img/favicon_260_260.png">
     <link rel="icon" type="image/png" sizes="32x32" href="assets/img/favicon_32_32.png">
     <link rel="icon" type="image/png" sizes="96x96" href="assets/img/favicon_96_96.png">
     <link rel="icon" type="image/png" sizes="16x16" href="assets/img/favicon_16_16.png">
-
     <meta name="msapplication-TileColor" content="#FFCC00">
     <meta name="msapplication-TileImage" content="assets/img/favicon_144_144.png">
     <meta name="theme-color" content="#FFCC00">
 
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css">
-
     <link rel="stylesheet" href="assets/css/style.css" />
 
-    <title>Emanuele Scarabattoli</title>
 </head>
 
 <body>
@@ -56,8 +55,8 @@
                 </div>
             </div>
             <div class="hero-title-wrapper">
-                <span class="hero-title">Emanuele Scarabattoli</span>
-                <span class="hero-subtitle">Web developer and designer</span>
+                <h1 class="hero-title">Emanuele Scarabattoli</h1>
+                <h2 class="hero-subtitle">Web developer and designer</h2>
                 <ul class="hero-socials">
                     <li><i class="fab fa-linkedin"></i></li>
                     <li><i class="fab fa-github"></i></li>
