--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="Hi! I'm Emanuele Scarabattoli, a software developer and web designer based in Perugia (PG), Umbria, Italy." />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="robots" content="index, follow">
-    <title>Emanuele Scarabattoli</title>
+    <title>Emanuele Scarabattoli - Web Developer And Designer</title>
 
     <link rel="apple-touch-icon" sizes="57x57" href="assets/img/favicon_57_57.png">
     <link rel="apple-touch-icon" sizes="72x72" href="assets/img/favicon_72_72.png">
@@ -58,56 +58,52 @@
                 <h1 class="hero-title">Emanuele Scarabattoli</h1>
                 <h2 class="hero-subtitle">Web developer and designer</h2>
                 <ul class="hero-socials">
-                    <li><i class="fab fa-linkedin"></i></li>
-                    <li><i class="fab fa-github"></i></li>
-                    <li><i class="fas fa-envelope"></i></li>
+                    <li>
+                        <a target="_blank" href="https://www.linkedin.com/in/emanuele-scarabattoli/"><i class="fab fa-linkedin"></i></a>
+                    </li>
+                    <li>
+                        <a target="_blank" href="https://github.com/emanuelescarabattoli"><i class="fab fa-github"></i></a>
+                    </li>
+                    <li>
+                        <a href="mailto:em.scarabattoli@gmail.com"><i class="fas fa-envelope"></i></a>
+                    </li>
                 </ul>
             </div>
         </div>
         <div class="hero-buttons">
-            <a class="button" href="#">About Me<i class="fas fa-angle-double-down fa-icon-right"></i></a>
+            <a class="button" href="#about">About Me<i class="fas fa-angle-double-down fa-icon-right"></i></a>
         </div>
     </div>
 
-    <div class="about">
+    <div id="about" class="about">
         <div class="about-wrapper">
             <span class="about-title">
                 Me and the code<i class="fas fa-code fa-icon-right"></i>
             </span>
             <span class="about-content">
                 <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab repudiandae explicabo esse eius
-                    officiis,
-                    assumenda in recusandae illo, qui consectetur aut repellendus omnis dolorem? Velit quam aperiam
-                    doloribus
-                    amet quaerat!
+                    Hi, my name is Emanuele Scarabattoli, I am a web developer and designer.
                 </p>
                 <p>
-                    Recusandae illo, qui consectetur aut repellendus omnis dolorem? Velit quam aperiam
-                    doloribus
-                    amet quaerat!
+                    My stack is Python, Javascript, Django, React, React Native, Redux, GraphQL and REST. I have an advanced knowledge of CSS and HTML.
                 </p>
                 <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab repudiandae explicabo esse eius
-                    officiis,
-                    assumenda in recusandae illo, qui consectetur aut repellendus omnis dolorem? Velit quam aperiam
-                    doloribus
-                    amet quaerat!
+                    I love to create applications that are not only well designed in terms of code architecture, but also with a cool look and UX experience.
+                </p>
+                <p>
+                    Please take a look at my <a class="link" href="https://github.com/emanuelescarabattoli">GitHub</a> profile to discover my way of write code.
                 </p>
             </span>
         </div>
     </div>
 
-    <div class="skills">
+    <div id="skills" class="skills">
         <div class="skills-wrapper">
             <span class="skills-title">
                 What I Love<i class="fas fa-heart fa-icon-right"></i>
             </span>
             <span class="skills-content">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab repudiandae explicabo esse eius officiis,
-                assumenda in recusandae illo, qui consectetur aut repellendus omnis dolorem? Velit quam aperiam
-                doloribus
-                amet quaerat!
+                Here a list of my favorite technologies and languages that I use every day at work or just to create something new every day
             </span>
             <div class="skills-items">
                 <div>
@@ -118,7 +114,7 @@
                         Javascript
                     </div>
                     <div class="skills-item-content">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                        I really love the Javascript and ECMAScript world
                     </div>
                 </div>
                 <div>
@@ -129,7 +125,7 @@
                         React
                     </div>
                     <div class="skills-item-content">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                        React and React Native help me fast applications
                     </div>
                 </div>
                 <div>
@@ -140,7 +136,7 @@
                         Python
                     </div>
                     <div class="skills-item-content">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                        For my GraphQL and REST APIs, usually I use Django
                     </div>
                 </div>
                 <div>
@@ -151,7 +147,7 @@
                         HTML and CSS
                     </div>
                     <div class="skills-item-content">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                        To make every kind of interface and design
                     </div>
                 </div>
             </div>
@@ -160,7 +156,7 @@
 
     <div class="portfolio">
         <div class="portfolio-wrapper">
-            <span class="portfolio-title">
+            <span id="portfolio" class="portfolio-title">
                 My Portfolio<i class="fas fa-layer-group fa-icon-right"></i>
             </span>
             <span class="portfolio-content">
@@ -193,19 +189,31 @@
         </div>
         <div class="footer-content">
             <div>
-                <span class="footer-title">Foo bar</span>
+                <span class="footer-title">Sections</span>
                 <ul class="footer-menu">
-                    <li>About</li>
-                    <li>Item</li>
-                    <li>Hello</li>
+                    <li>
+                        <a href="#about"><i class="fas fa-code fa-icon-left"></i>Me and the code</a>
+                    </li>
+                    <li>
+                        <a href="#skills"><i class="fas fa-heart fa-icon-left"></i>What I Love</a>
+                    </li>
+                    <li>
+                        <a href="#portfolio"><i class="fas fa-layer-group fa-icon-left"></i>My Portfolio</a>
+                    </li>
                 </ul>
             </div>
             <div>
                 <span class="footer-title">Contact me</span>
                 <ul class="footer-menu">
-                    <li><i class="fab fa-linkedin fa-icon-left"></i>Linkedin</li>
-                    <li><i class="fab fa-github fa-icon-left"></i>Github</li>
-                    <li><i class="fas fa-envelope fa-icon-left"></i>E-mail</li>
+                    <li>
+                        <a target="_blank" href="https://www.linkedin.com/in/emanuele-scarabattoli/"><i class="fab fa-linkedin fa-icon-left"></i>Linkedin</a>
+                    </li>
+                    <li>
+                        <a target="_blank" href="https://github.com/emanuelescarabattoli"><i class="fab fa-github fa-icon-left"></i>GitHub</a>
+                    </li>
+                    <li>
+                        <a href="mailto:em.scarabattoli@gmail.com"><i class="fas fa-envelope fa-icon-left"></i>E-mail</a>
+                    </li>
                 </ul>
             </div>
         </div>
