--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                     I love to create applications that are not only well designed in terms of code architecture, but also with a cool look and UX experience.
                 </p>
                 <p>
-                    Please take a look at my <a class="link" href="https://github.com/emanuelescarabattoli">GitHub</a> profile to discover my way of write code.
+                    Please take a look at my <a target="_blank" class="link" href="https://github.com/emanuelescarabattoli">GitHub</a> profile to discover my way of write code.
                 </p>
             </span>
         </div>
@@ -161,23 +161,23 @@
             </span>
             <span class="portfolio-content">
                 <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab repudiandae explicabo esse eius
-                    officiis,
-                    assumenda in recusandae illo, qui consectetur aut repellendus omnis dolorem? Velit quam aperiam
-                    doloribus
-                    amet quaerat!
+                    Here you can find some of my inventions, you can find a full list of my open-source projects on <a target="_blank" class="link" href="https://github.com/emanuelescarabattoli">GitHub</a>.
+                </p>
+                <br />
+                <b>Doulbe, a CSS framework with dark mode</b>
+                <p>
+                    Double is a responsive pure CSS framework that comes with all you need to implement the dark mode in your site
                 </p>
                 <p>
-                    Recusandae illo, qui consectetur aut repellendus omnis dolorem? Velit quam aperiam
-                    doloribus
-                    amet quaerat!
+                    <a target="_blank" class="link" href="https://github.com/emanuelescarabattoli/double">https://github.com/emanuelescarabattoli/double</a>
+                </p>
+                <br />
+                <b>React Top Progress Bar</b>
+                <p>
+                    An useful npm package to display a progress bar on top of your page
                 </p>
                 <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab repudiandae explicabo esse eius
-                    officiis,
-                    assumenda in recusandae illo, qui consectetur aut repellendus omnis dolorem? Velit quam aperiam
-                    doloribus
-                    amet quaerat!
+                    <a target="_blank" class="link" href="hhttps://github.com/emanuelescarabattoli/react-top-progress-bar">https://github.com/emanuelescarabattoli/react-top-progress-bar</a>
                 </p>
             </span>
         </div>
