--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
                     Here you can find some of my inventions, you can find a full list of my open-source projects on <a target="_blank" class="link" href="https://github.com/emanuelescarabattoli">GitHub</a>.
                 </p>
                 <br />
-                <b>Doulbe, a CSS framework with dark mode</b>
+                <b>Double, a CSS framework with dark mode</b>
                 <p>
                     Double is a responsive pure CSS framework that comes with all you need to implement the dark mode in your site
                 </p>
