--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
                     An useful npm package to display a progress bar on top of your page
                 </p>
                 <p>
-                    <a target="_blank" class="link" href="hhttps://github.com/emanuelescarabattoli/react-top-progress-bar">https://github.com/emanuelescarabattoli/react-top-progress-bar</a>
+                    <a target="_blank" class="link" href="https://github.com/emanuelescarabattoli/react-top-progress-bar">https://github.com/emanuelescarabattoli/react-top-progress-bar</a>
                 </p>
             </span>
         </div>
