--- a/index.html
+++ b/index.html
@@ -229,6 +229,7 @@
     <script>
 
         $(function () {
+            $("#window-text").show();
             $("#window-text").t(
                 {
                     speed: 50,
