--- a/index.html
+++ b/index.html
@@ -172,6 +172,12 @@
                     <a target="_blank" class="link" href="https://github.com/emanuelescarabattoli/double">https://github.com/emanuelescarabattoli/double</a>
                 </p>
                 <br />
+                <b>React Ribbons
+                    A React library to add fancy ribbons to your application
+                </p>
+                <p>
+                    <a target="_blank" class="link" href="https://github.com/emanuelescarabattoli/react-ribbons">https://github.com/emanuelescarabattoli/react-ribbons</a>
+                </p>
                 <b>React Top Progress Bar</b>
                 <p>
                     An useful npm package to display a progress bar on top of your page
