React ribbons fix

--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
                     <a target="_blank" class="link" href="https://github.com/emanuelescarabattoli/double">https://github.com/emanuelescarabattoli/double</a>
                 </p>
                 <br />
-                <b>React Ribbons
+                <b>React Ribbons</b>
                     A React library to add fancy ribbons to your application
                 </p>
                 <p>
