Fixes and new information

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                         <p id="window-text">
                             Hi!<br />
                             Are you ready?<br />
-                            Wait for user input
+                            Welcome to my portfolio site
                         </p>
                     </div>
                 </div>
@@ -63,6 +63,9 @@
                     </li>
                     <li>
                         <a target="_blank" href="https://github.com/emanuelescarabattoli"><i class="fab fa-github"></i></a>
+                    </li>
+                    <li>
+                        <a target="_blank" href="https://stackoverflow.com/users/8534482/emanuele-scarabattoli"><i class="fab fa-stack-overflow"></i></a>
                     </li>
                     <li>
                         <a href="mailto:em.scarabattoli@gmail.com"><i class="fas fa-envelope"></i></a>
@@ -108,7 +111,7 @@
             <div class="skills-items">
                 <div>
                     <div class="skills-item-icon">
-                        <i class="fab fa-js fa-icon-right"></i>
+                        <i class="fab fa-js"></i>
                     </div>
                     <div class="skills-item-title">
                         Javascript
@@ -119,18 +122,32 @@
                 </div>
                 <div>
                     <div class="skills-item-icon">
-                        <i class="fab fa-react fa-icon-right"></i>
+                        <i class="fab fa-react"></i>
                     </div>
                     <div class="skills-item-title">
                         React
                     </div>
                     <div class="skills-item-content">
-                        React and React Native help me fast applications
+                        Build amazing web applications
+                    </div>
+                </div>
+                <div>
+                    <div class="skills-item-icon-with-subtitle">
+                        <div>
+                            <i class="fab fa-react"></i>
+                            <span>Native</span>
+                        </div>
+                    </div>
+                    <div class="skills-item-title">
+                        React Native
+                    </div>
+                    <div class="skills-item-content">
+                        Fast way to build cross-platform mobile applications
                     </div>
                 </div>
                 <div>
                     <div class="skills-item-icon">
-                        <i class="fab fa-python fa-icon-right"></i>
+                        <i class="fab fa-python"></i>
                     </div>
                     <div class="skills-item-title">
                         Python
@@ -141,7 +158,7 @@
                 </div>
                 <div>
                     <div class="skills-item-icon">
-                        <i class="fab fa-html5 fa-icon-right"></i>
+                        <i class="fab fa-html5"></i>
                     </div>
                     <div class="skills-item-title">
                         HTML and CSS
@@ -179,6 +196,7 @@
                 <p>
                     <a target="_blank" class="link" href="https://github.com/emanuelescarabattoli/react-ribbons">https://github.com/emanuelescarabattoli/react-ribbons</a>
                 </p>
+                <br />
                 <b>React Top Progress Bar</b>
                 <p>
                     An useful npm package to display a progress bar on top of your page
@@ -219,13 +237,16 @@
                         <a target="_blank" href="https://github.com/emanuelescarabattoli"><i class="fab fa-github fa-icon-left"></i>GitHub</a>
                     </li>
                     <li>
+                        <a target="_blank" href="https://stackoverflow.com/users/8534482/emanuele-scarabattoli"><i class="fab fa-stack-overflow fa-icon-left"></i>Stack Overflow</a>
+                    </li>
+                    <li>
                         <a href="mailto:em.scarabattoli@gmail.com"><i class="fas fa-envelope fa-icon-left"></i>E-mail</a>
                     </li>
                 </ul>
             </div>
         </div>
         <div class="footer-credits">
-            <span>Emanuele Scarabattoli - 2019</span>
+            <span>Emanuele Scarabattoli - 2020</span>
             <span>Hosted with<i class="fas fa-heart"></i>by GitHub pages</span>
         </div>
     </div>
